--- a/Style/theme.css
+++ b/Style/theme.css
@@ -6,7 +6,10 @@
 body {
     font-size: 16px;
 }
-
+img{
+    width: 100%;
+    height: 100%;
+}
 
 /* .navbar {
     display: fixed;
@@ -34,7 +37,6 @@ body {
     border: none;
     color: rgb(157, 157, 157);
     font-size: 16px;
-    margin-right: 20px;
     margin-top: 20px;
     cursor: pointer;
     font-weight: bold;
@@ -68,8 +70,10 @@ body {
     flex-wrap: wrap;
 } */
 .title{
-    display: block;
+    display: flex;
     position: relative;
+    align-items: center;
+    flex-direction: row;
     padding-bottom: 1rem;
     padding-top: 2rem;
     max-width: 1150px;
@@ -77,11 +81,17 @@ body {
 }
 .TitleBox {
     text-align: left;
+    /* align-self: center; */
     color: white;
     max-width: 800px;
-    padding: 0 20px;
+    padding: 200px;
 }
-
+.titleIMG{
+    display: flex;
+    justify-content: flex-end;
+    border: 3px solid rgb(0, 61, 87);
+    border-radius: 1px;
+}
 .title1 {
     font-size: 24px;
     font-family: 'Roboto Condensed', sans-serif;
@@ -113,7 +123,7 @@ body {
     flex-basis: 300px;
     margin: 20px;
     background-color: rgb(101, 99, 99);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px rgba(0, 0, 0, 1);
     padding: 20px;
 }
 
