--- a/Style/theme.css
+++ b/Style/theme.css
@@ -115,7 +115,7 @@ img{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #323232;
+    background-color: #777777;
     padding: 50px;
 }
 
@@ -158,30 +158,28 @@ img{
     padding: 50px;
 }
 
-.SkillsBox {
-    flex-basis: 100%;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.Aboutme {
+.SkillsTitle {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin: 10px;
+    color: grey;
 }
 
-.AboutTxt {
+.SkillsText {
     font-size: 16px;
     line-height: 1.5;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 10px auto;
+    padding: 25px;
     color: whitesmoke;
 }
 
-.Box2 {
+.SkillsBox {
     flex-basis: 100%;
     height: 400px;
     background-color: #434343;
     background-size: cover;
     background-position: center;
+    margin: 50px;
+    text-align: center;
 }
 
