--- a/style/theme.css
+++ b/style/theme.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    
 }
 body {
     font-size: 16px;
@@ -10,27 +9,6 @@ img{
     width: 100%;
     height: 100%;
 }
-
-/* .navbar {
-    display: fixed;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-    background-color: #3d000000;
-}
-
-.navButtonGRP {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    padding: 0 20px;
-}
-.navtext {
-    display: flex;
-    align-items: center;
-} */
-
 .NavButton {
     position: sticky;
     background-color: transparent;
@@ -40,7 +18,7 @@ img{
     margin-top: 20px;
     cursor: pointer;
     font-weight: bold;
-    width: 65px;
+    width: 100px;
 }
 .NavButtons{
     flex-wrap: nowrap;
@@ -51,13 +29,13 @@ img{
 /* First section */
 .first {
     display: flex;
-    justify-content: top;
+    justify-content: center;
     align-items: center;
     height: calc(125vh - 60px);
     background: linear-gradient(to bottom, #000000, #434343);
     /* background-image: ; */
     background-size: cover;
-    background-position: top;
+    /*background-position: center;*/
     flex-direction: column;
     flex-wrap: nowrap;
     border-bottom: 4px solid #000000;
