--- a/style/theme.css
+++ b/style/theme.css
@@ -6,9 +6,10 @@ body {
     font-size: 16px;
 }
 img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
+/*About section*/
 .NavButton {
     position: sticky;
     background-color: transparent;
@@ -40,14 +41,12 @@ img{
     flex-wrap: nowrap;
     border-bottom: 4px solid #000000;
 }
-/* .first {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-} */
 .title{
-    display: flex;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    grid-template-areas:
+    "image"
+    "title";
     position: relative;
     align-items: center;
     flex-direction: row;
@@ -57,15 +56,14 @@ img{
     margin: auto;
 }
 .TitleBox {
-    text-align: left;
-    /* align-self: center; */
+    grid-area: title;
+    text-align: center;
     color: white;
     max-width: 800px;
-    padding: 200px;
+    padding: 10px;
 }
 .titleIMG{
-    display: flex;
-    justify-content: flex-end;
+    margin: auto;
     border: 3px solid rgb(0, 61, 87);
     border-radius: 1px;
 }
@@ -73,90 +71,41 @@ img{
     font-size: 24px;
     font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 10px;
-}
 
+}
 .title2 {
     font-size: 48px;
-    font-family: 'Oswald', sans-serif;
-    margin-bottom: 10px;
-}
-
-.title3 {
-    font-size: 18px;
-    font-family: 'Alegreya', serif;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 20px;
+    color: #434343;
 }
 
 /* Second section */
-.second {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: #777777;
-    padding: 50px;
+.second{
+    display: grid;
+    grid-template-columns: 4fr 7fr;
+    grid-template-areas:
+    "about" "skills";
+    background: linear-gradient(to bottom, #000000, #434343);
+    height: calc(125vh - 60px);
 }
-
-.Box {
-    flex-basis: 300px;
-    margin: 20px;
-    background-color: rgb(101, 99, 99);
-    box-shadow: 5px 5px rgba(0, 0, 0, 1);
-    padding: 20px;
+.aboutbox{
+    grid-area: about;
+    background-color: red;
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    margin: 3rem;
+    border-radius: 1.5rem;
 }
-
-.BoxTitle {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.BoxText {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
-
-.BoxButton {
-    background-color: #333;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-}
-.BoxButton:hover{
-
+.skillsbox{
+    grid-area: skills;
+    background-color: blue;
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    margin: 3rem;
 }
 /* Third section */
-.third {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: rgb(0, 0, 0);
-    padding: 50px;
-}
 
-.SkillsTitle {
-    font-size: 24px;
-    margin: 10px;
-    color: grey;
-}
-
-.SkillsText {
-    font-size: 16px;
-    line-height: 1.5;
-    max-width: 800px;
-    margin: 10px auto;
-    padding: 25px;
-    color: whitesmoke;
-}
-
-.SkillsBox {
-    flex-basis: 100%;
-    height: 400px;
-    background-color: #434343;
-    background-size: cover;
-    background-position: center;
-    margin: 50px;
-    text-align: center;
-}
 
