--- a/style/theme.css
+++ b/style/theme.css
@@ -9,6 +9,9 @@ img{
     width: 50%;
     height: 50%;
 }
+b{
+    font-family: 'Roboto Condensed', sans-serif;
+}
 /*About section*/
 .NavButton {
     position: sticky;
@@ -39,7 +42,7 @@ img{
     /*background-position: center;*/
     flex-direction: column;
     flex-wrap: nowrap;
-    border-bottom: 4px solid #000000;
+    border-bottom: 4px solid darkred;
 }
 .title{
     display: grid;
@@ -64,7 +67,7 @@ img{
 }
 .titleIMG{
     margin: auto;
-    border: 3px solid rgb(0, 61, 87);
+    border: 3px solid darkred;
     border-radius: 1px;
 }
 .title1 {
@@ -77,17 +80,23 @@ img{
     font-size: 48px;
     font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 20px;
-    color: #434343;
+    color: grey;
 }
-
+.title3 {
+    font-size: 28px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-bottom: 20px;
+    color: grey;
+}
 /* Second section */
 .second{
     display: grid;
     grid-template-columns: 4fr 7fr;
     grid-template-areas:
     "about" "skills";
-    background: linear-gradient(to bottom, #000000, #434343);
+    background: linear-gradient(to bottom, #434343, #000000);
     height: calc(125vh - 60px);
+    border-bottom: 4px solid darkred;
 }
 .aboutbox{
     grid-area: about;
@@ -95,7 +104,7 @@ img{
     width: auto;
     height: auto;
     padding: 1rem;
-    margin: 3rem;
+    margin: 4rem;
     border-radius: 1.5rem;
 }
 .skillsbox{
@@ -104,8 +113,21 @@ img{
     width: auto;
     height: auto;
     padding: 1rem;
-    margin: 3rem;
+    margin: 4rem;
+    border-radius: 1.5rem;
 }
 /* Third section */
-
+.third{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(125vh - 60px);
+    background: linear-gradient(to bottom, #000000, #434343);
+    /* background-image: ; */
+    background-size: cover;
+    /*background-position: center;*/
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border-bottom: 4px solid darkred;
+}
 
