--- a/style/theme.css
+++ b/style/theme.css
@@ -12,9 +12,15 @@ img{
 b{
     font-family: 'Roboto Condensed', sans-serif;
 }
+h1{
+    font-size: 24px;
+}
+h2{
+    font-size: 18px;
+}
 /*About section*/
 .NavButton {
-    position: sticky;
+    position: flex;
     background-color: transparent;
     border: none;
     color: rgb(157, 157, 157);
@@ -26,9 +32,15 @@ b{
 }
 .NavButtons{
     flex-wrap: nowrap;
+    position: absolute;
 }
 .NavButton:hover{
     text-decoration: underline;
+}
+.Logo{
+    color: aqua;
+    background-color: beige;
+    align-items: center;
 }
 /* First section */
 .first {
@@ -42,7 +54,7 @@ b{
     /*background-position: center;*/
     flex-direction: column;
     flex-wrap: nowrap;
-    border-bottom: 4px solid darkred;
+    border-bottom: 4px solid rgb(59, 59, 59);
 }
 .title{
     display: grid;
@@ -66,15 +78,17 @@ b{
     padding: 10px;
 }
 .titleIMG{
-    margin: auto;
-    border: 3px solid darkred;
-    border-radius: 1px;
+    margin: auto; 
+    max-width: 12rem;
+    max-height: 12rem;
+    border: 3px solid rgb(3, 3, 3);
+    border-radius: 50%;
+    object-fit: cover;
 }
 .title1 {
     font-size: 24px;
     font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 10px;
-
 }
 .title2 {
     font-size: 48px;
@@ -83,7 +97,7 @@ b{
     color: grey;
 }
 .title3 {
-    font-size: 28px;
+    font-size: 22px;
     font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 20px;
     color: grey;
@@ -96,38 +110,61 @@ b{
     "about" "skills";
     background: linear-gradient(to bottom, #434343, #000000);
     height: calc(125vh - 60px);
-    border-bottom: 4px solid darkred;
+    border-bottom: 4px solid rgb(58, 58, 58);
 }
 .aboutbox{
     grid-area: about;
-    background-color: red;
+    background-color: rgb(32, 32, 32);
     width: auto;
     height: auto;
-    padding: 1rem;
+    padding: 3rem;
     margin: 4rem;
     border-radius: 1.5rem;
+    border: 0.15rem solid #000000;
 }
 .skillsbox{
     grid-area: skills;
     background-color: blue;
     width: auto;
     height: auto;
-    padding: 1rem;
+    padding: 3rem;
     margin: 4rem;
     border-radius: 1.5rem;
+    border: 0.15rem solid #000000;
 }
 /* Third section */
 .third{
     display: flex;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
-    height: calc(125vh - 60px);
+    height: fit-content;
+    padding-bottom: 10rem;
     background: linear-gradient(to bottom, #000000, #434343);
     /* background-image: ; */
     background-size: cover;
     /*background-position: center;*/
     flex-direction: column;
     flex-wrap: nowrap;
-    border-bottom: 4px solid darkred;
+    border-bottom: 4px solid rgb(0, 0, 0);
 }
-
+.project{
+    
+}
+.projectTitle{
+    color: #5f5f5f;
+    font-size:  28px;
+    margin: 5rem;
+}
+.footer{
+    height: 12.5rem;
+    background-color: #000000;
+}
+.projects{
+    display: grid;
+    
+    background-color: gray;
+    width: auto;
+    height: auto;
+    padding: 3rem;
+    margin: 4rem;
+}
