--- a/style/theme.css
+++ b/style/theme.css
@@ -20,7 +20,6 @@ h2{
 }
 /*About section*/
 .NavButton {
-    position: flex;
     background-color: transparent;
     border: none;
     color: rgb(157, 157, 157);
@@ -31,16 +30,23 @@ h2{
     width: 100px;
 }
 .NavButtons{
+    display: flex;
     flex-wrap: nowrap;
-    position: absolute;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    width: 100%;
 }
 .NavButton:hover{
     text-decoration: underline;
 }
 .Logo{
     color: aqua;
+    width: 100%;
     background-color: beige;
     align-items: center;
+    justify-content: center;
 }
 /* First section */
 .first {
@@ -53,8 +59,9 @@ h2{
     background-size: cover;
     /*background-position: center;*/
     flex-direction: column;
-    flex-wrap: nowrap;
+    /*flex-wrap: nowrap;*/
     border-bottom: 4px solid rgb(59, 59, 59);
+    width: 100%;
 }
 .title{
     display: grid;
@@ -111,8 +118,9 @@ h2{
     background: linear-gradient(to bottom, #434343, #000000);
     height: 750px;
     border-bottom: 4px solid rgb(58, 58, 58);
+    width: 100%;
 }
-.aboutbox{
+.aboutBox{
     grid-area: about;
     background-color: rgb(99, 99, 99);
     width: auto;
@@ -122,7 +130,7 @@ h2{
     border-radius: 1.5rem;
     border: 0.15rem solid #000000;
 }
-.skillsbox{
+.skillsBox{
     grid-area: skills;
     background-color: rgb(99, 99, 99);
     width: auto;
@@ -135,7 +143,7 @@ h2{
 /* Third section */
 .third{
     display: flex;
-    justify-content: top;
+    width: 100%;
     align-items: center;
     height: fit-content;
     padding-bottom: 10rem;
