--- a/style/theme.css
+++ b/style/theme.css
@@ -24,19 +24,26 @@ h2{
     border: none;
     color: rgb(157, 157, 157);
     font-size: 16px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     cursor: pointer;
     font-weight: bold;
     width: 100px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 .NavButtons{
     display: flex;
     flex-wrap: nowrap;
-    position: fixed;
+    position: sticky;
+    top: 0;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    white-space: normal;
+    background-color: rgba(0,0,0, 0.8);
     width: 100%;
+    z-index: 999;
 }
 .NavButton:hover{
     text-decoration: underline;
